tests/script_errors/const_expr_index_out_of_bounds/error.txt
Error: 
    1 | {"snot": [0,1,2,3,4,5,6]}.snot[8]
      |                                ^ Array index out of bounds, got index 8 but expected an index in the range 0:7
